base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:                  
    app: nginx
  ports:
  - nodePort: 0
    port: 8080
    protocol: TCP
    targetPort: 8080
