base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  host: example.rahtiapp.fi
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    weight: 100
    name: nginx
status:
  ingress: []
